--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "redux-thunk": "^2.4.1",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1"
+  },
+  "devDependencies": {
+    "url-loader": "^4.1.1"
   }
 }
