--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^8.2.3",
     "chart.js": "^3.7.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.1",
