--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^8.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.67.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.1",
     "redux": "^4.1.2",
