--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "d3": "^7.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-native": "^0.67.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.1",
