--- a/test/fixtures/watchlist_assets.yml
+++ b/test/fixtures/watchlist_assets.yml
@@ -1,4 +1,13 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: watchlist_assets
+#
+#  id           :bigint           not null, primary key
+#  watchlist_id :integer
+#  symbol       :string
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
 
 # This model initially had no columns defined. If you add columns to the
 # model remove the '{}' from the fixture names and add the columns immediately
